# medical

./: Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
docker/: docker-compose.dev.yml  docker-compose.yml
src/medical/: app.py  celery.py  config.py  tasks.py
src/medical/static/: style.css
src/medical/templates/: index.html
